Bug 1648170 - Right align two menulists in Preference's Composition pane. r=aleca DONTBUILD

--- a/mail/themes/shared/mail/preferences/preferences.css
+++ b/mail/themes/shared/mail/preferences/preferences.css
@@ -474,7 +474,9 @@ html|input.indent {
 }
 
 #defaultFontSize,
-#directoriesList {
+#directoriesList,
+#localDirectoriesList,
+#defaultStartupDirList {
   margin-inline-end: 4px;
 }
 
